--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+img_align_celeba/
+
 # Created by https://www.gitignore.io/api/jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=jupyternotebooks
 
